# GAPRO_exercises

./: README.md
ex2/: Collectible.h  Engine.h  ITUGames.h  Player.h  Renderer.h  Score.h  main.cpp
ex4/: CMakeLists.txt  README.md  spritesheet.json
ex4/Engine/: CMakeLists.txt
ex4/Engine/Engine/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  Logger.h  MyEngine.cpp  MyEngine.h
ex4/ExampleGame/: CMakeLists.txt  main.cpp
ex4/ExampleGame/Game/: ComponentController.cpp  ComponentController.h  ComponentRendererSprite.cpp  ComponentRendererSprite.h
ex4/ExampleGame/data/: spritesheet.json
